--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -28,6 +28,10 @@ body {
   color: var(--white);
 }
 
+li {
+  list-style: none;
+}
+
 .container {
   padding-inline: 5rem;
 }
@@ -43,7 +47,8 @@ body {
   text-align: center;
 }
 
-.container .import h1 {
+.container .import h1,
+.title {
   font-family: var(--ff-abril);
   text-transform: uppercase;
   margin-block: 0.5rem;
@@ -55,4 +60,55 @@ body {
 
 .dropzone {
   margin-top: 1rem;
+}
+
+/* CARD DESIGN */
+
+.container.mt-5 {
+  padding-top: 2rem;
+}
+
+.card {
+  border: 1px solid #ccc;
+  padding: 2rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+}
+
+.card-title {
+  font-family: var(--ff-abril);
+  text-transform: uppercase;
+  font-size: 18px;
+  margin-bottom: 10px;
+  border-bottom: solid 1px #ccc;
+  padding-bottom: 10px;
+}
+
+.card-body li {
+  display: flex;
+  justify-content: space-between;
+}
+
+.title {
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
+.card-grd-title {
+  font-family: var(--ff-abril);
+  font-size: 25px;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 1rem 0;
+}
+
+@media (max-width: 512px) {
+  .container.mt-5,
+  .container {
+    padding: 1rem;
+  }
+
+  .card {
+    padding: 1rem;
+  }
 }
